# FireAnimation-SFML

./: CMakeLists.txt  README.md
src/game/: configuration.hpp  game.hpp  main.cpp
src/game/physics/: collision_cell.hpp  physic_object.hpp  physics.hpp
src/game/simulation/: renderer.cpp  renderer.hpp
src/peztool/: peztool.hpp
src/peztool/core/: render.hpp  scene.hpp  system.hpp
src/peztool/utils/: async_task.hpp  color_utils.hpp  grid.hpp  number_generator.hpp  racc.hpp
src/peztool/utils/interpolation/: interpolation.hpp
